# differentiable-tau-propagation

./: .gitignore  LICENSE  README.md  forward_simulation.ipynb  pyproject.toml
differentiable_tau_propagation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: synthetic_alpha_recovery.ipynb
simndd/: input_generator.py  learner.py  simulator.py  visualizer.py
